--- a/CSIA/Base.lproj/Main.storyboard
+++ b/CSIA/Base.lproj/Main.storyboard
@@ -57,11 +57,6 @@
                                     <outlet property="delegate" destination="ix0-zk-0zN" id="xnp-rN-XyK"/>
                                 </connections>
                             </tableView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Zl-Dq-fMO">
-                                <rect key="frame" x="0.0" y="174" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="jjj-6R-PfH"/>
@@ -69,6 +64,7 @@
                     <tabBarItem key="tabBarItem" systemItem="bookmarks" id="t4q-E3-ZYQ"/>
                     <navigationItem key="navigationItem" id="BLp-Dx-y57"/>
                     <connections>
+                        <outlet property="tableView" destination="p3S-Qn-Qoz" id="BMR-aV-sgD"/>
                         <segue destination="Lqx-fk-Dxi" kind="show" identifier="reflectionSegue" id="2q0-Ez-mz0"/>
                     </connections>
                 </viewController>
