--- a/CSIA/Base.lproj/Main.storyboard
+++ b/CSIA/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SolidBlackColor" translatesAutoresizingMaskIntoConstraints="NO" id="skJ-B1-YhX">
-                                <rect key="frame" x="0.0" y="170" width="375" height="4"/>
+                                <rect key="frame" x="0.0" y="170" width="430" height="4"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Reflections" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WIG-An-UUj">
@@ -29,15 +29,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaw-JM-fY7">
-                                <rect key="frame" x="16" y="86" width="343" height="61"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Start New Reflection"/>
-                                <connections>
-                                    <segue destination="EiN-gb-Hk6" kind="show" id="N7h-Wd-fuD"/>
-                                </connections>
-                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p3S-Qn-Qoz">
                                 <rect key="frame" x="0.0" y="230" width="375" height="499"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -57,6 +48,20 @@
                                     <outlet property="delegate" destination="ix0-zk-0zN" id="xnp-rN-XyK"/>
                                 </connections>
                             </tableView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qUN-2h-sRJ">
+                                <rect key="frame" x="0.0" y="174" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaw-JM-fY7">
+                                <rect key="frame" x="16" y="85" width="343" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Start New Reflection"/>
+                                <connections>
+                                    <segue destination="EiN-gb-Hk6" kind="show" id="N7h-Wd-fuD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="jjj-6R-PfH"/>
@@ -64,7 +69,8 @@
                     <tabBarItem key="tabBarItem" systemItem="bookmarks" id="t4q-E3-ZYQ"/>
                     <navigationItem key="navigationItem" id="BLp-Dx-y57"/>
                     <connections>
-                        <outlet property="tableView" destination="p3S-Qn-Qoz" id="BMR-aV-sgD"/>
+                        <outlet property="myTableView" destination="p3S-Qn-Qoz" id="eiU-oH-us4"/>
+                        <outlet property="searchBar" destination="qUN-2h-sRJ" id="gK5-vP-ZmZ"/>
                         <segue destination="Lqx-fk-Dxi" kind="show" identifier="reflectionSegue" id="2q0-Ez-mz0"/>
                     </connections>
                 </viewController>
@@ -491,6 +497,7 @@
         <image name="SolidBlackColor" width="1920" height="1080"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Vdn-0z-PxM"/>
         <segue reference="Hfr-Cr-dtc"/>
     </inferredMetricsTieBreakers>
 </document>
