--- a/CSIA/Base.lproj/Main.storyboard
+++ b/CSIA/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Display Reflections-->
+        <!--Reflections-->
         <scene sceneID="sxD-tV-dvr">
             <objects>
                 <viewController id="ix0-zk-0zN" customClass="DisplayReflections" customModule="CSIA" customModuleProvider="target" sceneMemberID="viewController">
@@ -66,7 +66,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="jjj-6R-PfH"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="bookmarks" id="t4q-E3-ZYQ"/>
+                    <tabBarItem key="tabBarItem" title="Reflections" id="t4q-E3-ZYQ"/>
                     <navigationItem key="navigationItem" id="BLp-Dx-y57"/>
                     <connections>
                         <outlet property="myTableView" destination="p3S-Qn-Qoz" id="eiU-oH-us4"/>
@@ -282,7 +282,7 @@
             </objects>
             <point key="canvasLocation" x="2412" y="-65.024630541871929"/>
         </scene>
-        <!--Display Goals-->
+        <!--Goals-->
         <scene sceneID="Dfy-g9-OOW">
             <objects>
                 <viewController id="wK9-qA-GRC" customClass="DisplayGoals" customModule="CSIA" customModuleProvider="target" sceneMemberID="viewController">
@@ -322,7 +322,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="93m-4P-cHu"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="9V6-m5-oaO"/>
+                    <tabBarItem key="tabBarItem" title="Goals" id="9V6-m5-oaO"/>
                     <navigationItem key="navigationItem" id="v5k-Li-lXo">
                         <barButtonItem key="rightBarButtonItem" title="+" id="Y9c-xY-HAr"/>
                     </navigationItem>
@@ -420,6 +420,7 @@
                     <connections>
                         <segue destination="wK9-qA-GRC" kind="relationship" relationship="viewControllers" id="a5N-rY-xTt"/>
                         <segue destination="ix0-zk-0zN" kind="relationship" relationship="viewControllers" id="Vdn-0z-PxM"/>
+                        <segue destination="gRT-U7-A88" kind="relationship" relationship="viewControllers" id="EPG-Ux-Vmr"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GKX-MZ-f3Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -723,6 +724,31 @@
             </objects>
             <point key="canvasLocation" x="2669.5999999999999" y="-1092.1182266009853"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="t4R-fG-XxP">
+            <objects>
+                <viewController id="gRT-U7-A88" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ql1-AQ-wXg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Settings Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZtX-uZ-Yip">
+                                <rect key="frame" x="134" y="396" width="106" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="pKm-7S-Jpd"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="ckZ-bA-sDg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Ar-IK-qX8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2338" y="1280"/>
+        </scene>
         <!--Second Tab Bar Controller-->
         <scene sceneID="cr2-Ba-3ao">
             <objects>
@@ -735,11 +761,31 @@
                     <connections>
                         <segue destination="wK9-qA-GRC" kind="relationship" relationship="viewControllers" id="g8W-ze-Q5v"/>
                         <segue destination="ix0-zk-0zN" kind="relationship" relationship="viewControllers" id="UNp-nx-IeV"/>
+                        <segue destination="gRT-U7-A88" kind="relationship" relationship="viewControllers" id="J1f-So-8wW"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rdp-bH-79L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1215" y="542"/>
+        </scene>
+        <!--Third Tab Bar Controller-->
+        <scene sceneID="AjQ-vJ-mHb">
+            <objects>
+                <tabBarController id="iUh-4C-neb" customClass="ThirdTabBarController" customModule="CSIA" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Aln-Mp-vA1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="wK9-qA-GRC" kind="relationship" relationship="viewControllers" id="hqZ-hR-3hX"/>
+                        <segue destination="ix0-zk-0zN" kind="relationship" relationship="viewControllers" id="2lF-9Y-7Yf"/>
+                        <segue destination="gRT-U7-A88" kind="relationship" relationship="viewControllers" id="Y3G-dY-hvr"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FvC-ce-svK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1397" y="1349"/>
         </scene>
         <!--Display Specific Reflection-->
         <scene sceneID="W9m-BW-BDj">
@@ -852,8 +898,9 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="kPY-ME-Iwt"/>
+        <segue reference="Y3G-dY-hvr"/>
         <segue reference="w2S-Bj-zKi"/>
-        <segue reference="a5N-rY-xTt"/>
-        <segue reference="Vdn-0z-PxM"/>
+        <segue reference="hqZ-hR-3hX"/>
+        <segue reference="2lF-9Y-7Yf"/>
     </inferredMetricsTieBreakers>
 </document>
